GNOME Bugzilla – Bug 694897
missing quesetion mark in one string
Last modified: 2013-05-18 21:59:02 UTC
The first occurrence should contain question mark, second one is tooltip, please add also context #: ../src/brasero-data-disc.c:561 ../src/brasero-data-disc.c:569 msgid "Discard the current modified project"
Created attachment 237741 [details] [review] Add a question mark to the question
why with space before question mark char?
this was fixed a while ago