Add a question mark to the question

https://bugzilla.gnome.org/show_bug.cgi?id=694897